--- a/nextadmin/package.json
+++ b/nextadmin/package.json
@@ -10,7 +10,14 @@
   },
   "dependencies": {
     "@next/eslint-plugin-next": "13.4.12",
-    "next": "13.4.12",
+    "@tailwindcss/forms": "^0.5.7",
+    "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
+    "cookie": "^0.6.0",
+    "iron-session": "^8.0.1",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "next": "^14.2.3",
     "react": "18",
     "react-dom": "18",
     "react-icons": "^4.11.0",
