--- a/nextadmin/package.json
+++ b/nextadmin/package.json
@@ -13,6 +13,9 @@
     "@heroicons/react": "^2.1.3",
     "@next/eslint-plugin-next": "13.4.12",
     "@uploadthing/react": "^6.5.3",
+    "axios": "^1.6.8",
+    "iron-session": "^8.0.1",
+    "js-cookie": "^3.0.5",
     "next": "13.4.12",
     "next-video": "^1.0.6",
     "react": "^18.3.1",
@@ -25,6 +28,7 @@
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "20.12.11",
     "@types/react": "^18.3.2",
     "autoprefixer": "^10.4.19",
